update:增加测试dev config

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,10 @@
   <div id="root"></div>
 
   <script type="text/javascript">
-    window.__INITIAL_STATE__ = {{ initState | safe }}
-    window.__config__ = {{ config | safe }}
+
+    window.__INITIAL_STATE__ = {}
+    window.__config__ = {"baseURI":"/face","apiPrefix":"/api","appCode":"HUM","cas":{"enable":false,"url":null},"userInfo":{"name":"admin@humleader.com","finance":"1","id":1},"env":"production","version":"0.2.6","layout":"basic","smallScreen":576}
+
   </script>
 </body>
 
