--- a/client/public/login.html
+++ b/client/public/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{ pageTitle }}</title>
+  <title>禾优曼</title>
   <link rel="icon" href="//www.humleader.com/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -11,7 +11,6 @@
   <div id="root"></div>
 
   <script type="text/javascript">
-    window.__INITIAL_STATE__ = {{ initState | safe }}
     window.__config__ = {{ config | safe }}
   </script>
 </body>
