--- a/client/public/login.html
+++ b/client/public/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>禾优曼</title>
+  <title>{{ pageTitle }}</title>
   <link rel="icon" href="//www.humleader.com/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
